trying to add viewport to css to make mobile friendly

--- a/style/style.css
+++ b/style/style.css
@@ -11,6 +11,11 @@ body {
     padding: 0;
 }
 
+@viewport {
+    width: device-width ;
+    zoom: 1.0 ;
+  }
+
 .title {
     text-align: center;
     font-family: brandon-grotesque;
