--- a/style/style.css
+++ b/style/style.css
@@ -11,6 +11,7 @@ body {
     padding: 0;
 }
 
+/* make mobile friendly? */
 @viewport {
     width: device-width ;
     zoom: 1.0 ;
@@ -42,29 +43,38 @@ body {
 
 #coat-of-arms-img {
     width: 30%;
-    height: 30%;
+    height: auto;
 }
 
 #star-shield-img {
     width: 30%;
-    height: 30%;
+    height: auto;
 }
 #coat-of-arms-div {
     padding-top: 10px;
     float:left; 
-    width:25%;
-    text-align: right;
+    width: 25%;
+    text-align: center;
+    /* border: solid 4px red; */
 }
 #title-div{
     float:left; 
     width:50%;
+    /* border: solid 4px yellow; */
 }
 #star-shield-div{
     padding-top: 34px;
     float:right;
-    width:25%;
-    text-align: left;
+    width: 25%;
+    text-align: center;
+    /* border: solid 4px pink; */
 }
+
+/* .title-spacer{
+    float: left;
+    width: 7%;
+    height: 100%;
+} */
 
 #main-div {
     min-height: 100%;
@@ -76,12 +86,18 @@ body {
 .title-wrapper {
     color: rgb(0, 85, 150);
     padding-bottom: 180px;
+    /* border: solid 5px purple; */
 }
 
 /* attribute selector */
 button[id^="button-"] {
-    background-color: black;
+    background-color: rgb(0, 85, 150);
     color: white;
+    /* margin-right: 2px; */
+}
+
+button[id^="button-"]:last-child{
+    margin-right: 0px;
 }
 
 #loc-map {
@@ -149,6 +165,73 @@ button[id^="button-"] {
 }
 
 #navbar-div {
-    padding-bottom: 60px;
+    padding-bottom: 100px;
+}
+
+/* bootstrap button no outline */
+.btn:focus {
+    box-shadow: none;
+  }
+  
+
+
+/* button-56 comes from https://getcssscan.com/css-buttons-examples */
+.button-56 {
+  align-items: center;
+  background-color: #fee6e3;
+  border: 2px solid #111;
+  border-radius: 8px;
+  box-sizing: border-box;
+  color: #111;
+  cursor: pointer;
+  display: flex;
+  font-family: Inter,sans-serif;
+  font-size: 16px;
+  height: 25px;
+  justify-content: center;
+  line-height: 24px;
+  max-width: 100%;
+  padding: 0 25px;
+  position: relative;
+  text-align: center;
+  text-decoration: none;
+  user-select: none;
+  -webkit-user-select: none;
+  touch-action: manipulation;
+}
+
+.button-56:after {
+  /* background-color: #111; */
+  background-color: rgb(231, 166, 20);
+  border-radius: 8px;
+  content: "";
+  display: block;
+  height: 25px;
+  left: 0;
+  width: 100%;
+  position: absolute;
+  top: -2px;
+  transform: translate(8px, 8px);
+  transition: transform .2s ease-out;
+  z-index: -1;
+}
+
+.button-56:hover:after {
+  transform: translate(0, 0);
+}
+
+.button-56:active {
+  background-color: #ffdeda;
+  outline: 0;
+}
+
+.button-56:hover {
+  outline: 0;
+}
+
+@media (min-width: 768px) {
+  .button-56 {
+    padding: 0 40px;
+  }
 }
 
